[gd_scene load_steps=13 format=1]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/player_bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/sheet.fire15.atex" type="Texture" id=3]
[ext_resource path="res://art/sheet.fire14.atex" type="Texture" id=4]
[ext_resource path="res://art/sheet.fire11.atex" type="Texture" id=5]
[ext_resource path="res://art/ship_red.png" type="Texture" id=6]
[ext_resource path="res://audio/laser1.wav" type="Sample" id=7]
[ext_resource path="res://audio/laser2.wav" type="Sample" id=8]
[ext_resource path="res://art/sheet.shield3.atex" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 52.1289

[sub_resource type="SpriteFrames" id=2]

animations = [ { "frames":[ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ], "loop":true, "name":"default", "speed":5.0 } ]

[sub_resource type="SampleLibrary" id=3]

samples/laser1 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 7 ) }
samples/laser2 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 8 ) }

[node name="player" type="Area2D"]

transform/scale = Vector2( 0.6, 0.6 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
rot_speed = 2.6
thrust = 500
max_vel = 400
friction = 0.65
bullet = ExtResource( 2 )

[node name="exhaust" type="AnimatedSprite" parent="."]

transform/pos = Vector2( -11, 46 )
frames = SubResource( 2 )
animation = "default"
frame = 2
playing = true

[node name="exhaust1" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 11, 46 )
frames = SubResource( 2 )
animation = "default"
frame = 2
playing = true

[node name="muzzle" type="Position2D" parent="."]

transform/pos = Vector2( 0.262947, -60.7224 )

[node name="Particles2D" type="Particles2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 0, 13 )
config/amount = 9
config/lifetime = 2.5
config/half_extents = Vector2( 2, 0 )
params/direction = 6.0
params/spread = 12.0
params/linear_velocity = 15.0
params/spin_velocity = 20.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 4.0
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spread = 0.74
randomness/linear_velocity = 0.49

[node name="ship" type="Sprite" parent="."]

transform/scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="bullet_container" type="Node" parent="."]

[node name="gun_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="shoot_sounds" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 3 )
config/pitch_random = 0.0

[node name="shield" type="Sprite" parent="."]

transform/pos = Vector2( -0.474899, -3.82845 )
transform/scale = Vector2( 0.993404, 1.05548 )
texture = ExtResource( 9 )

[connection signal="body_enter" from="." to="." method="_on_player_body_enter"]


